--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
             <!-- header -->
             <h1>botJS, version ${version}</h1>
             <!-- input fields -->
+            <label for="myModalWiki">Wiki</label>
+            <select id="myModalWiki">
+                <option value="https://memory-alpha.fandom.com">Memory Alpha</option>
+                <option value="https://littlebear.fandom.com">Little Bear Wiki</option>
+            </select>
             <label for="myModalFind">Find</label>
             <textarea id="myModalFind" rows="4"></textarea>
             <label for="myModalReplace">Replace</label>
