--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
             <select id="myModalWiki">
                 <option value="https://memory-alpha.fandom.com">Memory Alpha</option>
                 <option value="https://littlebear.fandom.com">Little Bear Wiki</option>
+                <option value="https://nickstoryuk.fandom.com">Nickstory UK Archives</option>
+                <option value="https://nickstoryjr.fandom.com">Nickstory Jr. Archives</option>
+                <option value="https://nickstoryjruk.fandom.com">Nickstory Jr. UK Wiki</option>
+                <option value="https://ma-test.fandom.com">MA Test Wiki</option>
+                <option value="https://teennickstory.fandom.com">TeenNickstory Archives</option>
+                <option value="https://nickstoriaitaly.fandom.com/it">Nickstoria Italy Archives</option>
+                <option value="https://nicktoonsglobearchives.fandom.com">Nicktoons: GLOBE Archives</option>
+                <option value="https://pbs-kids-sprout-universal-kids-sa.fandom.com">PBS Kids Sprout/Universal Kids Schedule Archive</option>
             </select>
             <label for="myModalFind">Find</label>
             <textarea id="myModalFind" rows="4"></textarea>
