Simplify heading text
Remove version reference from heading, that will be added via the JS

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <form id="myModal">
             <!-- header -->
-            <h1>botJS, version ${version}</h1>
+            <h1>botJS</h1>
             <!-- input fields -->
             <label for="myModalWiki">Wiki</label>
             <select id="myModalWiki">
