Adding default dropdown option

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <!-- input fields -->
             <label for="myModalWiki">Wiki</label>
             <select id="myModalWiki">
+                <option value="">Select wiki</option>
                 <option value="https://memory-alpha.fandom.com">Memory Alpha</option>
                 <option value="https://littlebear.fandom.com">Little Bear Wiki</option>
                 <option value="https://nickstoryuk.fandom.com">Nickstory UK Archives</option>
