Avoid duplicate ID

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <option value="https://nicktoonsglobearchives.fandom.com">Nicktoons: GLOBE Archives</option>
                 <option value="https://pbs-kids-sprout-universal-kids-sa.fandom.com">PBS Kids Sprout/Universal Kids Schedule Archive</option>
             </select>
-            <button id="myModalWiki">Continue</button>
+            <button id="myModalPickWiki">Continue</button>
             <!-- bot edit fields -->
             <label for="myModalFind">Find</label>
             <textarea id="myModalFind" rows="4"></textarea>
