Close `form` element
Adding the closing tag for the `form` element, I missed it before

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             <button id="myModalMove">Move</button>
             <button id="myModalCancel">Cancel</button>
             <button id="myModalClose">Close</button>
-            <!-- script -->
-            <script src="bot.js"></script>
+        </form>
+        <!-- script -->
+        <script src="bot.js"></script>
     </body>
 </html>
