--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>botJS</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="favicon.svg">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     </head>
     <body>
